[gd_scene load_steps=5 format=3 uid="uid://cldbgf3rfat2b"]

[ext_resource type="PackedScene" uid="uid://bx7yyu5k2qt1g" path="res://entities/unit/implementations/player/player.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://bxdjxwx7w1s1v" path="res://game.gd" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://cuk2icokicfx5" path="res://entities/unit/implementations/target_dummy/target_dummy.tscn" id="3_fc0e3"]
[ext_resource type="PackedScene" uid="uid://dom5e0xjscfkq" path="res://game_ui/game_ui.tscn" id="3_feb5d"]

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")

[node name="Player" parent="." instance=ExtResource("1_80nbo")]
position = Vector2(274, 225)

[node name="TargetDummy" parent="." instance=ExtResource("3_fc0e3")]
position = Vector2(812, 222)

[node name="GameUI" parent="." instance=ExtResource("3_feb5d")]

[connection signal="selected_unit_changed" from="Player" to="." method="_on_player_selected_unit_changed"]
